--- a/Sass/styles.css
+++ b/Sass/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Mulish", sans-serif;
+  overflow-x: hidden;
   /*--------- Styling for the FAQ Page -----*/
   /*--------- Styling for the Contact Us Page -----*/
   /*--------- Styling for the Pick Up Page -----*/
@@ -979,18 +980,18 @@ body .contactForm {
   font-family: "Mulish", sans-serif;
 }
 
-body .contactForm .col-md-5 {
+body .contactForm .col-lg-5 {
   padding-top: 150px;
   padding-bottom: 150px;
 }
 
 @media screen and (max-width: 900px) {
-  body .contactForm .col-md-5 {
+  body .contactForm .col-lg-5 {
     padding-bottom: 80px;
   }
 }
 
-body .contactForm .col-md-5 h3 {
+body .contactForm .col-lg-5 h3 {
   margin-left: 30px;
   font-size: 22px;
   line-height: 231.5%;
@@ -1003,33 +1004,33 @@ body .contactForm .col-md-5 h3 {
 }
 
 @media screen and (max-width: 900px) {
-  body .contactForm .col-md-5 h3 {
+  body .contactForm .col-lg-5 h3 {
     font-size: 19px;
     width: 184px;
   }
 }
 
-body .contactForm .col-md-5 .schedule {
+body .contactForm .col-lg-5 .schedule {
   font-size: 22px;
   line-height: 20px;
   margin-left: 38px;
 }
 
 @media screen and (max-width: 900px) {
-  body .contactForm .col-md-5 .schedule {
+  body .contactForm .col-lg-5 .schedule {
     font-size: 19px;
   }
 }
 
-body .contactForm .col-md-5 .schedule p {
+body .contactForm .col-lg-5 .schedule p {
   color: #028C32;
 }
 
-body .contactForm .col-md-5 .schedule p:nth-child(2) {
+body .contactForm .col-lg-5 .schedule p:nth-child(2) {
   color: rgba(0, 0, 0, 0.5);
 }
 
-body .contactForm .col-md-5 .info {
+body .contactForm .col-lg-5 .info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1040,36 +1041,36 @@ body .contactForm .col-md-5 .info {
   margin-bottom: 40px;
 }
 
-body .contactForm .col-md-5 .info p {
+body .contactForm .col-lg-5 .info p {
   color: rgba(0, 0, 0, 0.5);
   font-size: 22px;
 }
 
 @media screen and (max-width: 900px) {
-  body .contactForm .col-md-5 .info p {
+  body .contactForm .col-lg-5 .info p {
     font-size: 19px;
     line-height: 140%;
   }
 }
 
-body .contactForm .col-md-7 {
+body .contactForm .col-lg-7 {
   border: 1px solid rgba(2, 140, 50, 0.6);
   margin-top: 50px;
   margin-bottom: 80px;
   padding: 30px;
 }
 
-body .contactForm .col-md-7 textarea {
+body .contactForm .col-lg-7 textarea {
   border: 1px solid rgba(2, 140, 50, 0.6);
 }
 
-body .contactForm .col-md-7 textarea:focus {
+body .contactForm .col-lg-7 textarea:focus {
   border: 1px solid rgba(2, 140, 50, 0.6);
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-body .contactForm .col-md-7 h3 {
+body .contactForm .col-lg-7 h3 {
   font-size: 22px;
   color: #028C32;
 }
