--- a/Sass/styles.css
+++ b/Sass/styles.css
@@ -1269,8 +1269,7 @@ body .SectionTwo .col-lg-5 p + div {
 }
 
 body .SectionThree {
-  background-image: url(/Images/patternedBackground.svg);
-  background-color: #5bdb88;
+  background: rgba(91, 219, 136, 0.7) url(/Images/patternedBackground.svg);
   font-family: "Mulish", sans-serif;
 }
 
