--- a/Sass/styles.scss
+++ b/Sass/styles.scss
@@ -959,9 +959,8 @@ body {
     }
   }
   .SectionThree {
-    background-image: url(/Images/patternedBackground.svg);
-    background-color: #5bdb88;
-    // opacity: 0.7;
+    background:  rgba(91,219,136, 0.7) url(/Images/patternedBackground.svg);
+
     font-family: $formfont;
 
     @media screen and (max-width: $mywidth) {
