--- a/style.css
+++ b/style.css
@@ -435,6 +435,10 @@ table .tablelast {
   padding-right: 15px;
 }
 
+.address1 .map {
+  width: 100% !important;
+}
+
 .contactform {
   border: 1px solid #028C32;
   margin-top: 4em !important;
@@ -509,6 +513,10 @@ h3 {
 .track .img-responsive {
   width: 100%;
   height: auto;
+}
+
+.track .img-responsive p {
+  font-size: small;
 }
 
 .track .img-responsive button {
