--- a/style.scss
+++ b/style.scss
@@ -338,7 +338,11 @@ table {
             padding-right: 15px;
         }
     }
+    .map{
+        width: 100% !important;
+    }
 }
+
 .contactform{
     border: 1px solid $color1;
     margin-top: 4em !important;
@@ -401,6 +405,9 @@ h3{
     .img-responsive{
         width: 100%;
         height: auto;
+        p{
+            font-size: small;
+        }
         button{
             background-color: black;
             color: $ptext2;
