--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -3,6 +3,9 @@
 
 .head {
     box-shadow: $shadow;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     .navlinks {
         width: 100%;
         display: flex;
@@ -514,7 +517,7 @@
             width: 350px;
             padding: 20px;
         }
-        .prtypecont{
+        .prtypecont {
             margin-top: 10px !important;
         }
     }
@@ -550,8 +553,9 @@
         height: 560px;
         display: grid;
         img {
-            padding: 10px;
+         padding: 10px;
             justify-content: center;
+    
         }
     }
     button {
@@ -577,10 +581,14 @@
         }
         .cont {
             margin-bottom: 20px;
-            width: 300px;
+            //width: 300px;
             img {
                 // // padding: 10px;
                 justify-content: center;
+                display: flex;
+                justify-content: center;
+                text-align: center;
+                width: 100%;
             }
         }
         button {
@@ -687,10 +695,10 @@
 footer {
     background-color: $primarycolor;
     min-height: 600px;
-    .desktopFoot{
-        form{
+    .desktopFoot {
+        form {
             position: relative;
-            span{
+            span {
                 position: absolute;
                 transform: translateX(-100px);
             }
@@ -698,9 +706,9 @@ footer {
     }
     .Mobilefooter {
         display: none;
-        form{
+        form {
             position: relative;
-            span{
+            span {
                 position: absolute;
                 transform: translateX(-69px);
             }
@@ -717,7 +725,7 @@ footer {
     .logo {
         margin-top: 50px;
     }
-    .formFF{
+    .formFF {
         padding-left: 115px;
         margin-top: 4vh;
     }
@@ -802,9 +810,8 @@ footer {
             border: none;
             margin-bottom: 20px;
         }
-        
+
         button {
-            
             color: white;
             font-size: 12px;
             padding: 5px;
