--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -25,7 +25,6 @@ header {
             position: absolute;
             line-height: 2;
             bottom: -220%;
-            width: 300px;
         }
 
         a {
@@ -81,4 +80,15 @@ aside {
 .nop {
     margin-right: -35px;
     margin-left: 10px;
+}
+
+.blo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    gap: 0.4rem;
+    @media screen and (max-width: 800px) {
+        display: none;
+    }
 }
