--- a/styles/waste.css
+++ b/styles/waste.css
@@ -42,7 +42,6 @@ header #navOption {
     position: absolute;
     line-height: 2;
     bottom: -220%;
-    width: 300px;
   }
 }
 
@@ -106,6 +105,26 @@ aside ul {
 .nop {
   margin-right: -35px;
   margin-left: 10px;
+}
+
+.blo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 1rem;
+  gap: 0.4rem;
+}
+
+@media screen and (max-width: 800px) {
+  .blo {
+    display: none;
+  }
 }
 
 * {
