--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,3 +1,5 @@
+@import "./global";
+
 header {
     display: flex;
     justify-content: space-between;
@@ -27,10 +29,15 @@ header {
             bottom: -220%;
         }
 
+
         a {
             margin-right: 12px;
             text-decoration: none;
             color: green;
+            transition: all 300ms ease;
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 
@@ -58,7 +65,6 @@ aside {
         margin-top: 2em;
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 1.4em;
     }
 }
@@ -82,12 +88,13 @@ aside {
     margin-left: 10px;
 }
 
-.blo{
+.blo {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
     gap: 0.4rem;
+
     @media screen and (max-width: 800px) {
         display: none;
     }
